# Distributed

./: .gitignore  CMakeLists.txt  Matrix.hpp  ReadMe.md  algorithm.common  build.sh  file1.csv  file2.csv  file3.csv  main.cpp  operations.cpp  operations.hpp
